--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^7.3.4",
     "@shopify/react-native-skia": "^2.1.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/yup": "^0.29.14",
     "expo": "53.0.17",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -56,7 +57,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tmx-parser": "^1.5.0"
+    "tmx-parser": "^1.5.0",
+    "yup": "^1.6.1",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
