--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "@supabase/supabase-js": "^2.50.0",
     "@types/yup": "^0.29.14",
     "expo": "53.0.17",
+    "expo-asset": "^11.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.4",
+    "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
     "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
     "expo-sensors": "~14.1.4",
@@ -53,13 +56,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^13.14.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tmx-parser": "^1.5.0",
-    "yup": "^1.6.1",
-    "expo-location": "~18.1.6"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -73,6 +75,7 @@
     "isexe": "^3.1.1",
     "nativewind": "^4.1.23",
     "postcss": "^8.5.6",
+    "react-native-svg-transformer": "^1.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
